@@ -1,3 +1,13 @@
+Thu Sep 18 18:49:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tests/DCPS/Ownership/DataReaderListener.cpp:
+
+          take_next_sample() in a loop.
+
+        * tests/DCPS/Ownership/publisher.cpp:
+
+          Don't call wait_ack(), causing timeout in static builds.
+
 Thu Sep 18 04:50:38 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * tests/DCPS/Ownership/DataReaderListener.cpp:
